--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -72,7 +72,7 @@
     "axios": "0.21.4",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.3.1",
-    "class-validator": "0.13.1",
+    "class-validator": "^0.14.0",
     "clean-deep": "3.4.0",
     "concurrently": "5.3.0",
     "crypto-js": "4.1.1",
