Fix: ejs template injection vulnerability #110, version updated

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -80,6 +80,7 @@
     "csv-parser": "^3.0.0",
     "csvtojson": "2.0.1",
     "dotenv": "8.2.0",
+    "ejs": "^3.1.7",
     "ethers": "5.3.1",
     "form-data": "~4.0.0",
     "ganache-cli": "6.12.2",
