--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -89,7 +89,7 @@
     "jsonwebtoken": "^9.0.1",
     "loader-utils": "^2.0.4",
     "lodash": "^4.17.21",
-    "luxon": "1.27.0",
+    "luxon": "^2.5.2",
     "minimist": "^1.2.6",
     "moment": "2.29.4",
     "moment-timezone": "0.5.40",
