Fix: decode-uri-component vulnerable to Denial of Service (DoS) #128, version upgraded

--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -79,6 +79,7 @@
     "csv-parse": "^5.1.0",
     "csv-parser": "^3.0.0",
     "csvtojson": "2.0.1",
+    "decode-uri-component": "^0.2.1",
     "dotenv": "8.2.0",
     "ejs": "^3.1.7",
     "ethers": "5.3.1",
