--- a/apps/drec-api/package.json
+++ b/apps/drec-api/package.json
@@ -69,7 +69,7 @@
     "@nestjs/swagger": "4.7.15",
     "@nestjs/typeorm": "7.1.5",
     "aws-sdk": "^2.1272.0",
-    "axios": "0.21.4",
+    "axios": "^0.21.2",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.3.1",
     "class-validator": "0.14.0",
